sfdx-source/force-app/main/default/objects/Contact_Payment_Account_Relation__c/Contact_Payment_Account_Relation__c.object-meta.xml
<CustomObject>
    <label>Contact To Payment Account Relation</label>
    <nameField>
        <displayFormat>CPA-{0000}</displayFormat>
        <label>Contact Payment Account Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact To Payment Account Relations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>