sfdx-source/force-app/main/default/objects/Contact_Payment_Account_Relation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-1150: This field represents the associated Contact</description>
    <inlineHelpText>This field represents the associated Contact</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Account</relationshipLabel>
    <relationshipName>Contact_Payment_Account_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>