sfdx-source/force-app/main/default/objects/Contact_Payment_Account_Relation__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>LEM-1150: This field represents the associated Contact email</description>
    <formula>Contact__r.Email</formula>
    <inlineHelpText>This field represents the associated Contact email</inlineHelpText>
    <label>Email</label>
    <type>Text</type>
</CustomField>