sfdx-source/force-app/main/default/objects/Contact_Payment_Account_Relation__c/fields/Payment_Account__c.field-meta.xml
<CustomField>
    <fullName>Payment_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-1150: This field represents the associated Payment account</description>
    <inlineHelpText>This field represents the associated Payment account</inlineHelpText>
    <label>Payment Account</label>
    <referenceTo>Payment_Account__c</referenceTo>
    <relationshipLabel>Related Contacts</relationshipLabel>
    <relationshipName>Contact_Payment_Account_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>