sfdx-source/force-app/main/default/objects/Contact_Payment_Account_Relation__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>LEM-1150: This field represents the associated Contact phone</description>
    <formula>Contact__r.Phone</formula>
    <inlineHelpText>This field represents the associated Contact phone</inlineHelpText>
    <label>Phone</label>
    <type>Text</type>
</CustomField>